--- a/references.bib
+++ b/references.bib
@@ -12,6 +12,23 @@
     author = {Wu, Jian and Cui, Zhiming and Sheng, V and Zhao, Pengpeng and Su, Dongliang and Gong, Shengrong}
 }
 
+@article{10.1145/285055.285059,
+    title = {{A Threshold of Ln <i>n</i> for Approximating Set Cover}},
+    year = {1998},
+    journal = {J. ACM},
+    author = {Feige, Uriel},
+    number = {4},
+    month = {7},
+    pages = {634–652},
+    volume = {45},
+    publisher = {Association for Computing Machinery},
+    url = {https://doi.org/10.1145/285055.285059},
+    address = {New York, NY, USA},
+    doi = {10.1145/285055.285059},
+    issn = {0004-5411},
+    keywords = {approximation ratio, set cover}
+}
+
 @incollection{NIPS2017_7062,
     title = {{A Unified Approach to Interpreting Model Predictions}},
     year = {2017},
@@ -70,6 +87,19 @@
     pages = {319--330},
     volume = {17},
     doi = {10.1002/asmb.446}
+}
+
+@article{Wang_2018,
+    title = {{Analysis of the Mean Absolute Error ({\{}MAE{\}}) and the Root Mean Square Error ({\{}RMSE{\}}) in Assessing Rounding Model}},
+    year = {2018},
+    journal = {{\{}IOP{\}} Conference Series: Materials Science and Engineering},
+    author = {Wang, Weijie and Lu, Yanmin},
+    month = {3},
+    pages = {12049},
+    volume = {324},
+    publisher = {{\{}IOP{\}} Publishing},
+    url = {https://doi.org/10.1088%2F1757-899x%2F324%2F1%2F012049},
+    doi = {10.1088/1757-899x/324/1/012049}
 }
 
 @book{10.5555/1671238,
@@ -234,6 +264,19 @@
     arxivId = {cs.LG/1911.02508}
 }
 
+@article{HARRISON197881,
+    title = {{Hedonic housing prices and the demand for clean air}},
+    year = {1978},
+    journal = {Journal of Environmental Economics and Management},
+    author = {Harrison, David and Rubinfeld, Daniel L},
+    number = {1},
+    pages = {81--102},
+    volume = {5},
+    url = {http://www.sciencedirect.com/science/article/pii/0095069678900062},
+    doi = {https://doi.org/10.1016/0095-0696(78)90006-2},
+    issn = {0095-0696}
+}
+
 @inproceedings{10.1145/2783258.2788613,
     title = {{Intelligible Models for HealthCare: Predicting Pneumonia Risk and Hospital 30-Day Readmission}},
     year = {2015},
@@ -290,6 +333,18 @@
     year = {2014},
     author = {Szegedy, Christian and Zaremba, Wojciech and Sutskever, Ilya and Bruna, Joan and Erhan, Dumitru and Goodfellow, Ian and Fergus, Rob},
     arxivId = {cs.CV/1312.6199}
+}
+
+@inproceedings{10.5555/946247.946677,
+    title = {{Learning a Classification Model for Segmentation}},
+    year = {2003},
+    booktitle = {Proceedings of the Ninth IEEE International Conference on Computer Vision - Volume 2},
+    author = {Ren, Xiaofeng and Malik, Jitendra},
+    pages = {10},
+    series = {ICCV '03},
+    publisher = {IEEE Computer Society},
+    address = {USA},
+    isbn = {0769519504}
 }
 
 @article{DBLP:journals/corr/ShrikumarGK17,
@@ -420,6 +475,23 @@
     doi = {10.1007/978-1-4419-9326-7{\_}5}
 }
 
+@article{10.1023/A:1012460413855,
+    title = {{Saliency, Scale and Image Description}},
+    year = {2001},
+    journal = {Int. J. Comput. Vision},
+    author = {Kadir, Timor and Brady, Michael},
+    number = {2},
+    month = {11},
+    pages = {83–105},
+    volume = {45},
+    publisher = {Kluwer Academic Publishers},
+    url = {https://doi.org/10.1023/A:1012460413855},
+    address = {USA},
+    doi = {10.1023/A:1012460413855},
+    issn = {0920-5691},
+    keywords = {entropy, feature extraction, image content descriptors, image database, salient features, scale selection, scale-space, visual saliency}
+}
+
 @article{Vinciotti2003ScorecardCW,
     title = {{Scorecard construction with unbalanced class sizes}},
     year = {2003},
@@ -531,6 +603,11 @@
     title = {{Gradient Descent and Stochastic Gradient Descent}},
     url = {https://rasbt.github.io/mlxtend/user_guide/general_concepts/gradient-optimization/},
     howpublished = {https://rasbt.github.io/mlxtend/user{\_}guide/general{\_}concepts/gradient-optimization/}
+}
+
+@misc{Http://lib.stat.cmu.edu/datasets/boston,
+    title = {{http://lib.stat.cmu.edu/datasets/boston}},
+    url = {http://lib.stat.cmu.edu/datasets/boston}
 }
 
 @misc{Https://github.com/marcotcr/lime,
